force-app/main/default/objects/Refund__c/Refund__c.object-meta.xml
<CustomObject>
    <label>Refund Voucher</label>
    <nameField>
        <displayFormat>RF-{00000000}</displayFormat>
        <label>Refund Voucher No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds Vouchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>