force-app/main/default/objects/Refund__c/fields/CC_Commission__c.field-meta.xml
<CustomField>
    <fullName>CC_Commission__c</fullName>
    <label>CC Commission %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>