force-app/main/default/objects/Refund__c/fields/CC_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>CC_Commission_Amount__c</fullName>
    <formula>Amount__c *  Value(Text(CC_Commission__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>