force-app/main/default/objects/Refund__c/fields/Franchise_Code__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Code__c</fullName>
    <formula>Sales_Agreement__r.FranchiseCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franchise Code</label>
    <type>Text</type>
</CustomField>