force-app/main/default/objects/Refund__c/fields/Net_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Refund_Amount__c</fullName>
    <formula>Amount__c -  CC_Commission_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>