force-app/main/default/objects/Refund__c/fields/Payment_Voucher_No__c.field-meta.xml
<CustomField>
    <fullName>Payment_Voucher_No__c</fullName>
    <label>Payment Voucher No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>