force-app/main/default/objects/Refund__c/fields/Refund_Mode__c.field-meta.xml
<CustomField>
    <fullName>Refund_Mode__c</fullName>
    <label>Refund Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DBS -  NEW VISA</fullName>
                <label>DBS - NEW VISA</label>
            </value>
            <value>
                <fullName>AMEX 1K TO 19999</fullName>
            </value>
            <value>
                <fullName>BrainTree</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>AMEX 20K TO 99999</fullName>
            </value>
            <value>
                <fullName>AMEX 100K AND ABOVE</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
                <isActive>false</isActive>
                <label>Credit Card</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>