force-app/main/default/objects/Refund__c/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excess_Payment</fullName>
                <label>Excess Payment</label>
            </value>
            <value>
                <fullName>Agreement Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>