force-app/main/default/objects/Refund__c/fields/Refund_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Refund_Remarks__c</fullName>
    <label>Refund Remarks</label>
    <type>TextArea</type>
</CustomField>