force-app/main/default/objects/Refund__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Refunds Vouchers</relationshipLabel>
    <relationshipName>Refunds_Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>